--- a/Case/case.html
+++ b/Case/case.html
@@ -48,9 +48,14 @@
 
 			<button class="collapsible">Wireframe</button>
 			<div class="content">
-				<a href="#wf"><div class="collapsed">High Fidelity Interface Design</div></a>
+				<a href="#wf"><div class="collapsed">Low Fidelity Interface Design</div></a>
 			</div>
 
+			<button class="collapsible">Moodboarding</button>
+			<div class="content">
+				<a href="#t"><div class="collapsed">Reference and Inspiration</div></a>
+			</div>
+		
 			<button class="collapsible">Visual Design</button>
 			<div class="content">
 				<a href="#t"><div class="collapsed">Typography</div></a>
@@ -154,10 +159,10 @@
 
 		<div class="card right_container">
 			<div id="t1" class="title">
-				Low Fidelity Designs
+				Wireframe
 			</div>				
 			<div id="wf" class="subtitle">
-				Wireframing
+				Low Fidelity UID
 			</div>
 			<div class="description">
 				With user flows created, it wasn't long till I realized my wireframes to work on. Time was of essence during this pandemic. So it wasn't always possible to hold meetups, and so some decisions were left to my best knowledge. This didn't mean zero external influence on the design, however, most of the decisions were to be made by me alone. This project was a real test on my skills and design aesthetics, putting some serious responsibility on my shoulders. 
