--- a/Case/case.html
+++ b/Case/case.html
@@ -48,7 +48,7 @@
 
 			<button class="collapsible">Wireframe</button>
 			<div class="content">
-				<a href="#wf"><div class="collapsed">Low Fidelity Interface Design</div></a>
+				<a href="#wf"><div class="collapsed">Low Fidelity UID</div></a>
 			</div>
 
 			<button class="collapsible">Moodboarding</button>
@@ -64,7 +64,7 @@
 			</div>
 			<button class="collapsible">Mockups</button>
 			<div class="content">
-				<a href="#m"><div class="collapsed">High Fidelity Interface Design</div></a>
+				<a href="#m"><div class="collapsed">High Fidelity UID</div></a>
 			</div>
 			<button class="collapsible">User Feedback</button>
 			<div class="content">
@@ -226,10 +226,10 @@
 
 		<div class="card right_container">
 			<div id="t1" class="title">
-				High Fidelity UID
+				Mockup
 			</div>	
 			<div id="m" class="subtitle">
-				Mockup
+				High Fidelity UID
 			</div>
 			<div class="description">
 				This was solely handled by me, and hence the quality of screen renders dependent on my design aesthetics. There were many phases in the design process where a certain stage production rested solely on my decisions alone. This was quite a challenge as the quality of end product depends greatly on choices made in these solitary stages of the design process.
