--- a/Case/case.html
+++ b/Case/case.html
@@ -53,7 +53,7 @@
 
 			<button class="collapsible">Moodboarding</button>
 			<div class="content">
-				<a href="#t"><div class="collapsed">Reference and Inspiration</div></a>
+				<a href="#mb"><div class="collapsed">Reference and Inspiration</div></a>
 			</div>
 		
 			<button class="collapsible">Visual Design</button>
@@ -175,7 +175,7 @@
 			<div id="t1" class="title">
 				Moodboarding
 			</div>
-			<div id="wf" class="subtitle">
+			<div id="mb" class="subtitle">
 				Reference and Inspiration
 			</div>
 			<div class="description">
